dist_man1_MANS=

if BUILD_XOGECOIND
  dist_man1_MANS+=xogecoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=xogecoin-qt.1
endif

if BUILD_XOGECOIN_CLI
  dist_man1_MANS+=xogecoin-cli.1
endif

if BUILD_XOGECOIN_TX
  dist_man1_MANS+=xogecoin-tx.1
endif

if BUILD_XOGECOIN_UTIL
  dist_man1_MANS+=xogecoin-util.1
endif

if ENABLE_WALLET
if BUILD_XOGECOIN_WALLET
  dist_man1_MANS+=xogecoin-wallet.1
endif
endif
